Bucardo version 5.7.0, not yet released

  - Add runuser option
    [Jon Jensen]

  - Add foreground flag
    [Chris Barbour]

  - Remove support for long-abandoned Drizzle database
    [Jon Jensen]

  - Match pg_* schema names rather than looser pg*
    [Valentina Glagoleva]

  - Document --batch option
    [Jon Jensen, suggested by Mark Stewart]

  - Support UTF-8 in spellcheck used by release tests
    [Jon Jensen]

  - Update RPM building
    [Jon Jensen]

  - Remove the bucardo_delete_sync trigger on the bucardo.sync table
    [Greg Sabino Mullane]

  - Add path to standard FreeBSD perl
    [Jon Jensen, suggested by Teetoow]

  - Replace deprecated TG_RELNAME with TG_TABLE_NAME
    [Andreas Karlsson]

  - Support DEBUG2 log level via command-line option --loglevel=debug2
    [Jon Jensen]

  - Documentation updates
    [Jon Jensen]

  - Fix tests for serializable transactions
    [David Christensen]

  - Look for bucardo.schema relative to install directory
    [David Christensen]


Bucardo version 5.6.0, released February 28, 2020

  - Minor PostgreSQL 11/12 tweaks in `bucardo install`
    [David Christensen]

  - Add config option log_timer_format to glog() to customize timestamp output
    [David Christensen, suggested by David Wheeler]

  - Change handling of file-path config settings so that they are no longer
    lower-cased. The new log_timer_format config will also be case-preserved.
    [David Christensen and David Wheeler]

  - Fixed the relation parameter to the add customcode command to support
    schema-qualified relation names.
    [David Wheeler]

  - Optimized table lookup when validating syncs to a single query, rather than
    separate queries for each table. Also added checks to avoid purging "toast"
    tables and old delta tables
    [Gustavo Tonini] (https://github.com/bucardo/bucardo/pull/182)

  - Improve the unique conflict exception handler sample code and test
    [David E. Wheeler] (https://github.com/bucardo/bucardo/pull/194)
