@@ -25,6 +25,7 @@ use DBIx::Safe '1.2.4';                     ## Filter out what DB calls customco
 use sigtrap       qw( die normal-signals ); ## Call die() on HUP, INT, PIPE, or TERM
 use Config        qw( %Config            ); ## Used to map signal names
 use File::Spec    qw(                    ); ## For portable file operations
+use File::Temp    qw(                    ); ## For creating and using temporary files
 use Data::Dumper  qw( Dumper             ); ## Used to dump information in email alerts
 use POSIX         qw( strftime strtod    ); ## For grabbing the local timezone, and forcing to NV
 use Sys::Hostname qw( hostname           ); ## Used for host safety check, and debugging/mail sending
@@ -6949,6 +6950,7 @@ sub validate_sync {
             return 0;
         }
 
+        #$self->glog("\%tablescache=" . Dumper(\%tablescache), LOG_DEBUG2);
         for my $key (keys %{ $tablescache{ $t } }) {
             $g->{$key} = $tablescache{$t}{$key};
         }
@@ -7046,9 +7048,12 @@ sub validate_sync {
             $g->{columnlist} = join ',' => @{$g->{cols}};
             $g->{safecolumnlist} = join ',' => @{$g->{safecols}};
 
-            ## Note which columns are bytea
+            ## Note which columns are bytea or lo
           BCOL: for my $colname (keys %$colinfo) {
                 my $c = $colinfo->{$colname};
+
+                $g->{locols}{$colname} = $c->{attnum} - 1 if $c->{ftype} eq 'public.lo';
+
                 next if $c->{atttypid} != 17; ## Yes, it's hardcoded, no sweat
                 $i = 0;
                 for my $pk (@{$g->{pkey}}) {
@@ -7060,6 +7065,7 @@ sub validate_sync {
                     $i++;
                 }
             }
+            #$self->glog("after checking for bytea & lo columns, \$g=" . Dumper($g), LOG_DEBUG2);
 
             $srcdbh->do('RESET search_path');
 
@@ -9833,9 +9839,10 @@ sub push_rows {
     ## It is up to the caller to populate these, even if the syncname is ''
     my $customname = $Table->{newname}{$syncname} || {};
 
-     ## Name of the table to copy. Only Postgres can be used as a source
+    ## Name of the table to copy. Only Postgres can be used as a source
     my $source_tablename = "$Table->{safeschema}.$Table->{safetable}";
     my $sourcedbh = $SourceDB->{dbh};
+    #$self->glog("\$SourceDB=" . Dumper($SourceDB), LOG_DEBUG2);
 
     ## Actual number of source rows read and copied. May be less than $total_rows
     my $source_rows_read = 0;
@@ -9845,6 +9852,29 @@ sub push_rows {
 
         ## Build the clause (cache) and kick it off
         my $SELECT = $select_clause || 'SELECT *';
+
+        ## Set up for large object copying and oid translation
+
+        # count of how many lo columns we are dealing with right now
+        my $lo_cols_count = keys %{ $Table->{locols} ||= {} };
+        $self->glog("lo_cols_count=$lo_cols_count", LOG_DEBUG2);
+
+        # keys of source oids for which to export lobs; values are undef
+        my %source_lo_oids;
+
+        # map each source large object oid to a File::Temp filehandle of its exported
+        # large object file, or to undef if the large object didn't exist on the source
+        my %source_lo_oid_to_fh;
+
+        # for each target, ref to an array of unused available oids to use for lobs
+        my %target_lo_oids;
+
+        # map each target to a map of source oids to that target's oids
+        my %lo_oid_map;
+
+        # map each target to a flag for whether real large object placeholders
+        # were created, not just oids reserved
+        my %target_create_lo;
 
         ## Prepare each target that is using this select clause
         for my $Target (@{ $srccmd{$select_clause} }) {
@@ -9866,6 +9896,37 @@ sub push_rows {
             ## Using columnlist avoids worrying about the order of columns
 
             if ('postgres' eq $type) {
+                if ($lo_cols_count) {
+                    # TODO: support fullcopy
+                    if ($mode eq 'fullcopy') {
+                        my $msg = "Warning! Unable to handle columns of lo datatype with fullcopy";
+                        $self->glog($msg, LOG_WARN);
+                        die $msg;
+                    }
+
+                    if ($total_rows) {
+                        my $tgtcmd = $self->{sqlprefix} . "SELECT ";
+                        my $dbh = $Target->{dbh};
+                        if ($target_create_lo{$targetname} = ($dbh->{pg_server_version} < 120000)) {
+                            # Internal function pg_nextoid() first appeared in Postgres 12,
+                            # so we have to create real large objects to allocate oids.
+                            $tgtcmd .= "lo_from_bytea(0, '')";
+                            $self->glog(qq{Creating large objects on target "$targetname" as placeholders}, LOG_DEBUG2);
+                        }
+                        else {
+                            # Since we can, wait to create large objects till we actually
+                            # import them, to avoid leaving unused ones to be cleaned up.
+                            $tgtcmd .= "pg_nextoid('pg_catalog.pg_largeobject_metadata', 'oid', 'pg_catalog.pg_largeobject_metadata_oid_index')";
+                        }
+                        $tgtcmd .= " FROM generate_series(1, ?)";
+                        my $sth = $dbh->prepare($tgtcmd);
+                        $sth->execute($total_rows * $lo_cols_count);
+                        my $bucket = $target_lo_oids{$targetname} ||= [];
+                        push @$bucket, map { $_->[0] } @{ $sth->fetchall_arrayref };
+                        $sth->finish;
+                    }
+                }
+
                 my $tgtcmd = "$self->{sqlprefix}COPY $target_tablename$columnlist FROM STDIN";
                 $Target->{dbh}->do($tgtcmd);
             }
@@ -9959,14 +10020,51 @@ sub push_rows {
 
                 $source_rows_read++;
 
+                # Split COPY row into columns to translate large object oids
+                my @buffer_vals_if_lo;
+                if ($lo_cols_count) {
+                    @buffer_vals_if_lo = split /\t/, $buffer, -1;
+                    chomp $buffer_vals_if_lo[-1];
+                }
+
                 ## For each target using this particular SELECT clause
                 for my $Target (@{ $srccmd{$select_clause} }) {
 
+                    my $targetname = $Target->{name};
                     my $type = $Target->{dbtype};
 
                     ## For Postgres, we simply do COPY to COPY
                     if ('postgres' eq $type) {
-                        $Target->{dbh}->pg_putcopydata($buffer);
+                        # Translate any large object oids for this target
+                        my $new_buffer;
+                        if ($lo_cols_count) {
+                            # Copy the source row's values before modifying the oids
+                            # so they can be used again for the next target
+                            my @vals = @buffer_vals_if_lo;
+
+                            my $locols = $Table->{locols};
+                            #$self->glog("locols=" . Dumper($locols), LOG_DEBUG2);
+                            for my $name (keys %$locols) {
+                                my $idx = $locols->{$name};
+                                my $source_oid = $vals[$idx];
+                                next if $source_oid eq '\N';
+
+                                # Store the source row's lo oids as part of the first target we see,
+                                # since we're already looping over the columns here.
+                                $source_lo_oids{$source_oid} = undef;
+
+                                my $target_oid = shift @{ $target_lo_oids{$targetname} } or do {
+                                    my $msg = qq{Error getting new lo oid on target "$targetname"};
+                                    $self->glog($msg, LOG_WARN);
+                                    die $msg;
+                                };
+                                $vals[$idx] = $lo_oid_map{$targetname}{$source_oid} = $target_oid;
+                            }
+
+                            $new_buffer = join("\t", @vals) . "\n";
+                        }
+
+                        $Target->{dbh}->pg_putcopydata($new_buffer || $buffer);
                     }
                     ## For flat files destined for Postgres, just do a tab-delimited dump
                     elsif ('flatpg' eq $type) {
@@ -10085,6 +10183,49 @@ sub push_rows {
             $sourcedbh->do('SELECT 1');
         }
 
+        ## Export large objects to be replicated
+
+        if ($lo_cols_count) {
+            my @source_lo_oids = sort { $a <=> $b } keys %source_lo_oids;
+
+            # Check whether the oids actually exist as large objects since we
+            # want their absence to be non-fatal just as it is on the source.
+            # We can't just call pg_lo_export() and let it fail because the
+            # result of pg_lo_export() is unspecific: it could fail due to full
+            # filesystem, invalid path, insufficient permissions, etc., and
+            # those are fatal errors.
+            my $sql = q{
+                SELECT oids.oid
+                FROM (SELECT unnest(?::oid[]) AS oid) oids
+                LEFT JOIN pg_largeobject_metadata m
+                    ON m.oid = oids.oid
+                WHERE m.oid IS NULL
+            };
+            my $sth = $sourcedbh->prepare($sql);
+            $sth->execute(\@source_lo_oids);
+            @source_lo_oid_to_fh{ map { $_->[0] } @{$sth->fetchall_arrayref} } = ();
+            $sth->finish;
+
+            for my $oid (
+                grep { not exists $source_lo_oid_to_fh{$_} }
+                @source_lo_oids
+            ) {
+                my $fh = File::Temp->new;
+                my $filename = $fh->filename;
+                my $msg_end = qq{from source lo oid $oid to "$filename"};
+                if ($sourcedbh->pg_lo_export($oid, $filename)) {
+                    $source_lo_oid_to_fh{$oid} = $fh;
+                    $self->glog(qq{Large object exported $msg_end}, LOG_VERBOSE);
+                }
+                else {
+                    my $msg = qq{Error exporting large object $msg_end};
+                    $self->glog($msg, LOG_WARN);
+                    die $msg;
+                }
+            }
+            #$self->glog("source_lo_oid_to_fh=" . Dumper(\%source_lo_oid_to_fh), LOG_DEBUG2);
+        }
+
         ## Perform final cleanups for each target
         for my $Target (@{ $srccmd{$select_clause} }) {
 
@@ -10103,6 +10244,74 @@ sub push_rows {
                 if ($self->{dbdpgversion} < 21801) {
                     $dbh->do('SELECT 1');
                 }
+
+                if ($lo_cols_count) {
+                    # Do we have an existing lo because Postgres version < 12?
+                    my $lo_exists = $target_create_lo{$tname};
+
+                    for my $source_oid (sort { $a <=> $b } keys %source_lo_oid_to_fh) {
+                        my $target_oid = $lo_oid_map{$tname}{$source_oid};
+
+                        my $lo_fh = $source_lo_oid_to_fh{$source_oid};
+                        if ($lo_fh) {
+                            my $success;
+                            my $lo_file = $lo_fh->filename;
+                            my $size = -s $lo_file;
+
+                            # Must write to an existing lo because Postgres version < 12?
+                            if ($lo_exists) {
+                                if ($size == 0) {
+                                    # Nothing to do since the pre-created lo is empty and thus already matches the source!
+                                    $success = 1;
+                                }
+                                else {
+                                    my $lo_fd = $dbh->pg_lo_open($target_oid, $dbh->{pg_INV_WRITE});
+                                    my $nbytes = $dbh->pg_lo_write(
+                                        $lo_fd,
+                                        do {
+                                            open my $fh, '<', $lo_file
+                                                or die qq{Error opening file "$lo_file": $!};
+                                            binmode $fh
+                                                or die qq{Error setting binmode on file "$lo_file": $!};
+                                            local $/;
+                                            <$fh>
+                                        },
+                                        $size
+                                    );
+                                    $success = $dbh->pg_lo_close($lo_fd);
+                                    $success = 0 if $nbytes != $size;
+                                }
+                            }
+                            else {
+                                $success = $dbh->pg_lo_import_with_oid($lo_file, $target_oid);
+                            }
+
+                            my $msg_end = "from source oid $source_oid to target oid $target_oid ($size bytes)";
+                            if ($success) {
+                                $self->glog("Large object replicated $msg_end", LOG_VERBOSE);
+                            }
+                            else {
+                                my $msg = "Error writing large object $msg_end";
+                                $self->glog($msg, LOG_WARN);
+                                die $msg;
+                            }
+                        }
+                        else {
+                            $self->glog("Large object source oid $source_oid is invalid; stored unused oid $target_oid on target", LOG_NORMAL);
+                            # Unlink any existing lo with this oid to make it invalid
+                            # like on the source, not a valid 0-byte lo.
+                            $lo_exists and $dbh->pg_lo_unlink($target_oid);
+                        }
+                    }
+
+                    # If large objects were actually created and any were unused because
+                    # of NULL lo fields, delete them now to clean up after ourselves.
+                    if ($lo_exists) {
+                        $self->glog("Cleaning up unused large objects with oids=" . join(',', @{ $target_lo_oids{$tname} }), LOG_DEBUG2);
+                        $dbh->pg_lo_unlink($_) for @{ $target_lo_oids{$tname} };
+                    }
+                }
+
                 ## If this table is set to makedelta, add rows to bucardo.delta to simulate the
                 ##   normal action of a trigger and add a row to bucardo.track to indicate that
                 ##   it has already been replicated here.
